Fix specificity on setting collapsed items width for vertical nav.

--- a/less/vertical-nav.less
+++ b/less/vertical-nav.less
@@ -227,7 +227,7 @@
     }
   }
 }
-.collapsed {
+.nav-pf-vertical.collapsed {
   width: @nav-pf-vertical-collapsed-width;
   &.collapsed-secondary-nav-pf { // collapsed state with secondary menu pinned
     width: @nav-pf-vertical-width;
@@ -248,7 +248,7 @@
     }
   }
   &.hover-tertiary-nav-pf {
-    width: calc(@nav-pf-vertical-collapsed-width + (@nav-pf-vertical-badges-width * 2));
+    width: calc(@nav-pf-vertical-collapsed-width + (@nav-pf-vertical-width * 2));
     &.nav-pf-vertical-with-badges {
       width: calc(@nav-pf-vertical-collapsed-width + (@nav-pf-vertical-badges-width * 2));
     }
